--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,48 @@
   --color-black: hsl(0, 0%, 7%);
 }
 
+/* general  */
+
 html {
   font-family: "Barlow Semi Condensed", system-ui, -apple-system,
     BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
     "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+body {
+  background-color: var(--color-grey-0);
+}
+
+/* testimonials */
+
+.testimonial__container {
+  max-width: 1240px;
+  width: calc(100% - 40px);
+  margin: 4rem auto;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.testimonial {
+  border-radius: 8px;
+  padding: 24px;
+}
+
+.testimonial:nth-of-type(1) {
+  background-color: var(--color-purple-deep);
+  color: var(--color-white);
+}
+.testimonial:nth-of-type(2) {
+  background-color: var(--color-grey-3);
+  color: var(--color-white);
+}
+.testimonial:nth-of-type(3),
+.testimonial:nth-of-type(5) {
+  background-color: var(--color-white);
+  color: var(--color-grey-3);
+}
+.testimonial:nth-of-type(4) {
+  background-color: var(--color-blue-dark);
+  color: var(--color-grey-1);
 }
